--- a/admin/jqadm/themes/default/jqcombo.css
+++ b/admin/jqadm/themes/default/jqcombo.css
@@ -8,7 +8,7 @@
 /* JQuery UI styles */
 
 #ui-datepicker-div {
-	z-index: 2000 !important;
+	z-index: 1040 !important;
 }
 
 .ai-combobox {
